# pyspoke-web

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  rl.sh  setup.cfg
dev-bin/: rl  runtests  spoke-dashboard  spoke-webchannel  spoke-webproxy  spoke-webserver
src/spoke_web/: __init__.py  cli.py  conn.py
tests/cases/code/black/: test.sh
tests/cases/conn/basic/: client.py  server.py
tests/cases/conn/basic/expected/: server.txt
tests/cases/conn/ssl/: client.py  server.py  test.sh
tests/cases/conn/ssl/expected/: client1.txt  client2.txt
tests/cases/webproxy/: echo_client.py  index.html  test.sh
tests/cases/webproxy/expected/: echo_client.txt
tests/common/: find-free-port
