[metadata]
name = pyspoke-web
version = 0.0.1
author = samflam
author_email = pyspoke-web@samflam.com
description = A websocket server for proxying a pyspoke server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/samflam/pyspoke-web
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    spoke-dashboard = spoke_web.cli:dashboard
    spoke-webserver = spoke_web.cli:webserver
    spoke-webchannel = spoke_web.cli:webchannel

[options.packages.find]
where = src
