[metadata]
name = pyspoke-web
version = attr: spoke_web.version.__version__
author = samflam
author_email = pyspoke-web@samflam.com
description = websocket extensions for pyspoke
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/samflam/pyspoke-web
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    spoke-webproxy = spoke_web.cli:webproxy

[options.packages.find]
where = src
